--- a/schedule/index.html
+++ b/schedule/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>2308网课课程表</title>
   <link type=text/css  rel="styleSheet" href="style.css"/>
-  <link rel="icon" href="https://gh.wsm-25.workers.dev/https://raw.githubusercontent.com/wsm25/wsm25.github.io/main/schedule/background.jpg" type="image/x-icon" />
+  <link rel="icon" href="horse.png" type="image/x-icon" />
   <!-- <script src="https://unpkg.com/vue@2.6.14/dist/vue.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
 </head>
