--- a/schedule/index.html
+++ b/schedule/index.html
@@ -6,7 +6,7 @@
   <link type=text/css  rel="styleSheet" href="style.css"/>
   <link rel="icon" href="horse.png" type="image/x-icon" />
   <!-- <script src="https://unpkg.com/vue@2.6.14/dist/vue.js"></script> -->
-  <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
+  <script src="https://unpkg.com/vue@2.6.14/dist/vue.min.js"></script>
 </head>
 <body>
   <div class='main-table' id="main-table"><table>
