modified:   schedule/index.html

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class='main-table' id="main-table"><table>
-    <tr><th v-for="x in head">{{x}}</th></th>
+    <tr><th v-for="x in head">{{x}}</th></tr>
     <tr v-for="row in table"><td v-for="i in row">{{i}}</td></tr>
   </table></div>
   <script src="main.js"></script>
