--- a/TikTacToe/index.html
+++ b/TikTacToe/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <script src="vue.global.js"></script>
+  <script src="https://unpkg.com/browse/vue@3.2.33/dist/vue.global.js"></script>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="horse.svg" type="image/x-icon" />
 </head>
@@ -18,7 +18,6 @@
     </table>
     <br><button @click="clear">还原</button>
     <br><div class="notice">{{notice}}</div>
-    <br><div class="test">{{}}</div>
   </div>
 
   <script src="main.js"></script>
